--- a/action.yml
+++ b/action.yml
@@ -1,32 +1,58 @@
-name: 'My Awesome list'
-description: 'Generate awesome list from user starred repositories'
+name: Star list generator
+description: |
+  Generate a list of repositories that the running user has starred.
+inputs:
+  token:
+    required: true
+    description: |
+      A GitHub Personal Access Token (PAT). With a classic PAT, no OAuth scopes are
+      required. Fine-grained PATs are not currently supported.
+  git_commit_message:
+    required: false
+    description: The commit message to use.
+    default: 'chore(updates): updated entries in files'
+  git_email:
+    required: false
+    description: The email to use for the commit.
+    default: 'actions@users.noreply.github.com'
+  git_name:
+    required: false
+    description: The user name to use for the commit.
+    default: 'GitHub Actions'
+  git_pull_options:
+    required: false
+    description: |
+      The method to use when calling `git-pull` prior to committing the update. Blank by
+      default, supported values are any parameters to `git-pull`. Note that `--tags` and
+      `--unshallow` will be added automatically as required.
+    default: ''
+  load_stars_from_json:
+    required: false
+    description: |
+      This is an advanced option. If specified, the viewer stargazing data will be loaded
+      from the `data.json` file in the repository.
+    default: 'false'
+  date_time:
+    required: false
+    description: |
+      The YAML locale configuration for dates and times. If omitted, dates will be
+      formatted as an ISO date (`2024-10-21`) and times will be formatted with a 24-hour
+      clock, omitting minutes (`13:24`).
+  output_filename:
+    required: false
+    description: |
+      The output file name relative to the repo root directory, defaulting to `README.md`.
+    default: README.md
+  template_path:
+    required: false
+    description: |
+      The template path relative to the repo root directory. The default value is
+      `TEMPLATE.md.njk`, a `nunjucks` template.
+
+runs:
+  using: 'node20'
+  main: 'dist/index.js'
+
 branding:
   icon: align-justify
   color: yellow
-inputs:
-  compact-by-topic:
-    description: 'Generate another page with output compacted by github topics'
-    default: 'false'
-    required: false
-  api-token:
-    description: 'Personal API Token'
-    required: true
-  github-name:
-    description: 'Name shown in the commit'
-    default: 'GitHub Actions'
-    required: false
-  github-email:
-    description: 'Email shown in the commit'
-    default: 'actions@users.noreply.github.com'
-    required: false
-  template-path:
-    required: false
-    description: 'EJS template path relative to project root directory'
-    default: 'TEMPLATE.ejs'
-  output-filename:
-    description: 'The output file name, default to README.md'
-    required: false
-    default: 'README.md'
-runs:
-  using: 'node16'
-  main: 'index.js'
