--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "nunjucks": "^3.2.4",
     "parse-link-header": "^2.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-github": "^12.0.0",
     "remark-toc": "^9.0.0",
     "yaml": "^2.6.0"
   },
